# domain-recon

./: .dockerignore  .gitattributes  .gitignore  Dockerfile  LICENSE  README.md  app.py  cli.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
reconlib/: __init__.py  demo.py  export.py  models.py  scanner.py  utils.py
reconlib/checks/: __init__.py  attack_surface.py  dns_records.py  dnssec_caa.py  email_auth.py  http_headers.py  registration.py  tls_cert.py
static/: app.js  style.css
templates/: index.html
tests/: test_core.py
